--- a/국회 -정리.ipynb
+++ b/국회 -정리.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Start : 국회에 대해 우리는 얼마나 알고있을까?\n",
+    "\n",
+    "저를 포함한 대부분의 사람들이 국회에 어떤 사람들이 있고, 어떤 일을 하는지 잘 알지 못합니다.\n",
+    "데이터 분석을 수행하고 그 결과가 이미 잘 알고있는 사실들을 확인하는데 그친다면 그저 무의미한 반복에 지나지 않을 것입니다. 저는 이번 분석으로 국회에 대해 알려지지 않은 인사이트를 발굴하고 국회가 어떤 사람들로 이루어져 있고 어떤 활동을 하고 있는지 일반인의 관심을 제고할 수 있도록 하는데에 초점을 맞추었습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Package, Data load"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -25,18 +42,21 @@
    "source": [
     "df_people = pd.read_csv('data/new_people.csv',encoding='cp949')\n",
     "df_process = pd.read_csv('data/process.csv',low_memory=False)\n",
-    "df_suggest = pd.read_csv('data/suggest.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_suggest = pd.read_csv('data/suggest.csv')\n",
+    "\n",
     "pp = df_people.copy()\n",
     "pc = df_process.copy()\n",
     "sg = df_suggest.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "new_people 데이터에는 역대 국회의원 현황 5605건,\n",
+    "suggest에는 국회의원 발의법의안 62658건,\n",
+    "process 본회의 처리 안건 68530건이 있습니다.\n",
+    "약간의 전처리를 통해 시각화 및 인사이트 도출을 시작하겠습니다."
    ]
   },
   {
@@ -456,7 +476,7 @@
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
-   "number_sections": true,
+   "number_sections": false,
    "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
